<resources>
    <string name="app_name">Almuneish</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name">Almuneish</string>
    <string name="OrderOverview">Order Overview</string>
    <string name="RecentOrder">Recent Orders</string>
    <string name="gadad">New</string>
    <string name="accepted">Accepted</string>
    <string name="upcoming">Upcoming</string>
    <string name="login">Login</string>
    <string name="phonenumber">phoneNumber</string>
    <string name="password">password</string>
    <string name="logins">login</string>
    <string name="order_overview">Order OverView</string>
    <string name="log_out">Log Out</string>
    <string name="order">Order</string>
    <string name="payment_method">Payment Method</string>
    <string name="driver">Driver</string>
    <string name="status">Status</string>
    <string name="address">address</string>
    <string name="shiping_price">Shiping price</string>
    <string name="discount">disCount</string>
    <string name="subtotal">subtotal</string>
    <string name="price">Price</string>


    <string name="ALL">عرض الكل</string>
    <string name="AddComment">اضف تعليق</string>
    <string name="rate">التقيم</string>
    <string name="ProductDetails">تفاصيل المنتج</string>
    <string name="cancel">Cancel</string>
    <string name="NearByYou">استكشف الاقرب اليك</string>
    <string name="harf">حرف مميزه</string>
    <string name="Projects">مشاريع مميزه</string>
    <string name="locations">موقعى</string>
    <string name="searchNear">ابحث عن الاماكن القريبه</string>
    <string name="details">التفاصل</string>
    <string name="offers">العروض</string>
    <string name="discover">استكشف اخر العروض المميزه</string>
    <string name="Fav">المفضله</string>
    <string name="Fav2">الاماكن المفضله لديك</string>
    <string name="supplier">دخول التجار</string>
    <string name="account">الحساب</string>
    <string name="join">طلب انضمام</string>
    <string name="notifications">الاشعارات</string>
    <string name="about">عن تطبيق</string>
    <string name="share">مشاركه</string>
    <string name="contactUs">اتصل بنا</string>
    <string name="english">english</string>
    <string name="arabic">Arabic</string>
    <string name="recent_order">history</string>
    <string name="yesterday">yesterday</string>
    <string name="today">today</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AcceptedCount">AcceptedCount</string>
    <string name="KG">K.G</string>
    <string name="countRefused">countRefused</string>
    <string name="CompleteCount">CompleteCount</string>
    <string name="CountShiped"> CountShip</string>
    <string name="orders">Orders</string>
    <string name="Waiting">Waiting</string>
    <string name="notes">Notes</string>
    <string name="client">Client</string>
    <string name="types">Types</string>
    <string name="almuneish_receipt"> Almuneish Receipt </string>
    <string name="total">Total</string>
    <string name="delievery">Delievery</string>
    <string name="Discount">Discount</string>
    <string name="totals">Total</string>
    <string name="Founed">Founed </string>
    <string name="tt"></string>
    <string name="hour">hour</string>

</resources>